# TraceTelemetry

./: .gitignore  README.md  TraceTelemetry.sln  pyrightconfig.json
TraceTelemetry/: TraceTelemetry.slnx
TraceTelemetry-Delphi/: RCa08236  README.md  TraceTelemetry.Delphi.dpr  TraceTelemetry.Delphi.dproj  TraceTelemetry.Delphi.identcache  TraceTelemetry.groupproj
TraceTelemetry-Delphi/Examples/: Poc.dpr  Poc.dproj
TraceTelemetry-Delphi/Source/: TraceTelemetry.Client.pas  TraceTelemetry.Models.pas  TraceTelemetry.Options.pas  TraceTelemetry.Queue.pas  TraceTelemetry.Transport.pas
TraceTelemetry.Client/: README.md  Telemetry.Client.cs  TelemetryOptions.cs  TraceTelemetry.Client.csproj  TraceTelemetry.Client.slnx
TraceTelemetry.Client/Geo/: IpCountryResolver.cs
TraceTelemetry.Client/Models/: TelemetryEvent.cs
TraceTelemetry.Client/Queue/: FileTelemetryQueue.cs
TraceTelemetry.Client/Transport/: FileDumpTransport.cs  TelemetryTransport.cs
TraceTelemetry.Poc/: Program.cs  TraceTelemetry.Poc.csproj  appsettings.json
trace-telemetry-python/: README.md  pyproject.toml
trace-telemetry-python/examples/: poc.py
trace-telemetry-python/src/trace_telemetry/: __init__.py  client.py  options.py  queue.py  transport.py
